# Godgiftedevil

./: .gitignore  FACE_ORGANIZER_README.md  README.md  main.py  pyproject.toml  requirements.txt
face_organizer/: __init__.py  cli.py  cluster.py  config.py  detector.py  encoder.py  labeler.py  organizer.py  pipeline.py  utils.py
tests/: __init__.py  test_cli.py  test_cluster.py  test_config.py  test_encoder.py  test_labeler.py  test_organizer.py  test_utils.py
